Add predefined LinkedList