@@ -1,8 +1,10 @@
 package com.itschool.session19.homework;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.LinkedList;
+import java.util.List;
 
 public final class PredefinedCollections {
-    public static ArrayList<Integer> arrayList = new ArrayList<>(Arrays.asList(6, 7, 9, 4, 5, 6, 7));
+    public static ArrayList<Integer> arrayList = new ArrayList<>(List.of(1, 2, 3, 4, 7, 9, 3, 8));
+    public static LinkedList<Integer> linkedList = new LinkedList<>(List.of(1, 2, 3, 4, 7, 9, 3, 8));
 }
